# backend/learning-service/src/main/java/com/esquilospeak/learning/infrastructure/LessonProgressRepository.java
@@ -5,8 +5,10 @@ import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
+import java.util.Optional;
 
 @Repository
 public interface LessonProgressRepository extends JpaRepository<LessonProgress, String> {
     List<LessonProgress> findByUserId(String userId);
+    Optional<LessonProgress> findByUserIdAndLessonIdAndStatus(String userId, String lessonId, String status);
 }
